version 0.8.3:
 - Reworked the way AimlParser objects are created, to allow support for
   XML namespaces in a future version.
 - First pass at Unicode-proofing the whole system, so that multi-lingual
   AIML files can be processed.

version 0.8.2:
 - Added protection against infinite AIML recursion.
 - Removed the deprecated Kernel.getBotName and Kernel.setBotName functions.
 - Added workaround for Unicode input crash.  Feeding the Kernel Unicode
   input no longer crashes the interpreter, but some internal input-formatting
   operations must be skipped, which could cause some nonsensical replies
   (like you're not already used to nonsensical replies, though...)

version 0.8.1:
 - "system" elements now attempt to intelligently convert between UNIX-style
   and Windows-style pathnames as appropriate.  For cross-platform compatibility,
   all AIML files should use UNIX-style paths inside their "system" elements.
 - Fixed crashes under Windows9X when a "system" element is executed when
   w9xpopen.exe is unavailable.
 - Re-piped most errors and warnings to go to stderr instead of stdout.
 - Fixed bug that would cause the the bot to stop responding to any input in a session
   if the "that" or "topic" strings were 100% whitespace (but still not empty).
 - Fixed bug that would cause multi-line "that" strings to become corrupted.  For
   example, "Hello there.\nNice to meet you" would become "HELLO THERENICE TO MEET
   YOU" when queried for that-matching.

version 0.8:
 - Removed support for non-standard "mode" attribute in "system" elements.
   It just wasn't worth breaking the AIML standard for.
 - Reworked persistent session support (I warned you!).  The old method involving
   Kernel.persistentSessions() has been removed.  Instead, there is a new
   Kernel.getSessionData() method which gives the bot author access to the session
   data.  You can store this data however you wish.  Session data can be restored
   later by repeated calls to Kernel.setPredicate().