@@ -1,9 +1,6 @@
 Laundry list of future tasks, in no particular order:
 
  - AIML 1.0.1 compliance (highest priority):
-   - Add support for multiple stars in patterns (and the subsequent "x,y"
-     format of the "index" attribute of star, thatstar, and topicstar
-     elements.
    - Unknown yet well-defined elements (e.g. HTML) inside templates
      (see sections 3.2, 3.6).
    - formalize whitespace handling (sees section 2.10).
