@@ -683,11 +683,6 @@ session dictionaries."""
         # to have one * each, only an index of 1 currently makes sense.
         try: index = int(elem[1]['index'])
         except KeyError: index = 1
-        if index > 1:
-            if self._verboseMode:
-                err = "WARNING: index>1 currently has no meaning in <star> tags.\n"
-                sys.stderr.write(err)
-            return ""
         # fetch the user's last input
         inputStack = self.getPredicate(self._inputStack, sessionID)
         input = self._subbers['normal'].sub(inputStack[-1])
@@ -696,7 +691,7 @@ session dictionaries."""
         try: that = self._subbers['normal'].sub(outputHistory[-1])
         except: that = "" # there might not be any output yet
         topic = self.getPredicate("topic", sessionID)
-        response = self._brain.star("star", input, that, topic)
+        response = self._brain.star("star", input, that, topic, index)
         return response
     
     # system
@@ -782,11 +777,6 @@ session dictionaries."""
         # matched by a *.
         try: index = int(elem[1]['index'])
         except KeyError: index = 1
-        if index > 1:
-            if self._verboseMode:
-                err = "WARNING: index>1 currently has no meaning in <thatstar> tags.\n"
-                sys.stderr.write(err)
-            return ""
         # fetch the user's last input
         inputStack = self.getPredicate(self._inputStack, sessionID)
         input = self._subbers['normal'].sub(inputStack[-1])
@@ -795,7 +785,7 @@ session dictionaries."""
         try: that = self._subbers['normal'].sub(outputHistory[-1])
         except: that = "" # there might not be any output yet
         topic = self.getPredicate("topic", sessionID)
-        response = self._brain.star("thatstar", input, that, topic)
+        response = self._brain.star("thatstar", input, that, topic, index)
         return response
 
     # think
@@ -816,11 +806,6 @@ session dictionaries."""
         # matched by a *.
         try: index = int(elem[1]['index'])
         except KeyError: index = 1
-        if index > 1:
-            if self._verboseMode:
-                err = "WARNING: index>1 currently has no meaning in <topicstar> tags.\n"
-                sys.stderr.write(err)
-            return ""
         # fetch the user's last input
         inputStack = self.getPredicate(self._inputStack, sessionID)
         input = self._subbers['normal'].sub(inputStack[-1])
@@ -829,7 +814,7 @@ session dictionaries."""
         try: that = self._subbers['normal'].sub(outputHistory[-1])
         except: that = "" # there might not be any output yet
         topic = self.getPredicate("topic", sessionID)
-        response = self._brain.star("topicstar", input, that, topic)
+        response = self._brain.star("topicstar", input, that, topic, index)
         return response
 
     # uppercase
@@ -923,16 +908,22 @@ if __name__ == "__main__":
     _testTag(k, 'star test #1', 'You should test star begin', ['Begin star matched: You should']) 
     _testTag(k, 'star test #2', 'test star creamy goodness middle', ['Middle star matched: creamy goodness'])
     _testTag(k, 'star test #3', 'test star end the credits roll', ['End star matched: the credits roll'])
+    _testTag(k, 'star test #4', 'test star having multiple stars in a pattern makes me extremely happy',
+             ['Multiple stars matched: having, stars in a pattern, extremely happy'])
     _testTag(k, 'system', "test system", ["The system says hello!"])
     _testTag(k, 'that test #1', "test that", ["I just said: The system says hello!"])
     _testTag(k, 'that test #2', "test that", ["I have already answered this question"])
     _testTag(k, 'thatstar test #1', "test thatstar", ["I say beans"])
     _testTag(k, 'thatstar test #2', "test thatstar", ["I just said \"beans\""])
+    _testTag(k, 'thatstar test #3', "test thatstar multiple", ['I say beans and franks for everybody'])
+    _testTag(k, 'thatstar test #4', "test thatstar multiple", ['Yes, beans and franks for all!'])
     _testTag(k, 'think', "test think", [""])
     k.setPredicate("topic", "fruit")
     _testTag(k, 'topic', "test topic", ["We were discussing apples and oranges"]) 
     k.setPredicate("topic", "Soylent Green")
-    _testTag(k, 'topicstar', 'test topicstar', ["Solyent Green is made of people!"])
+    _testTag(k, 'topicstar test #1', 'test topicstar', ["Solyent Green is made of people!"])
+    k.setPredicate("topic", "Soylent Ham and Cheese")
+    _testTag(k, 'topicstar test #2', 'test topicstar multiple', ["Both Soylents Ham and Cheese are made of people!"])
     _testTag(k, 'unicode support', u"\xd4\xe7\xc9\xcf\xba\xc3", [u"Hey, you speak Chinese! \xd4\xe7\xc9\xcf\xba\xc3"])
     _testTag(k, 'uppercase', 'test uppercase', ["The Last Word Should Be UPPERCASE"])
     _testTag(k, 'version', 'test version', ["PyAIML is version %s" % k.version()])
