@@ -156,10 +156,17 @@ updating the tests in Kernel.py!
 <category>
 <pattern>TEST STAR * MIDDLE</pattern>
 <template>Middle star matched: <star/></template>
-</category><category>
+</category>
+<category>
 <pattern>TEST STAR END *</pattern>
 <template>End star matched: <star/></template>
 </category>
+<category>
+<pattern>TEST STAR * MULTIPLE * MAKES ME *</pattern>
+<template>Multiple stars matched: <star index="1"/>, <star index="2"/>, <star index="3"/></template>
+</category>
+
+
 
 <!-- system -->
 <category>
@@ -188,6 +195,16 @@ updating the tests in Kernel.py!
 <that>I SAY *</that>
 <template>I just said "<thatstar/>"</template>
 </category>
+<category>
+<pattern>TEST THATSTAR MULTIPLE</pattern>
+<template>I say beans and franks for everybody</template>
+</category>
+<category>
+<pattern>TEST THATSTAR MULTIPLE</pattern>
+<that>I SAY * AND * FOR EVERYBODY</that>
+<template>Yes, <thatstar index="1"/> and <thatstar index="2"/> for all!</template>
+</category>
+
 
 <!-- think -->
 <category>
@@ -216,6 +233,12 @@ updating the tests in Kernel.py!
 <category>
 <pattern>TEST TOPICSTAR</pattern>
 <template>Solyent <topicstar/> is made of people!</template>
+</category>
+</topic>
+<topic name="SOYLENT * AND *">
+<category>
+<pattern>TEST TOPICSTAR MULTIPLE</pattern>
+<template>Both Soylents <topicstar index="1"/> and <topicstar index="2"/> are made of people!</template>
 </category>
 </topic>
 
