@@ -3,6 +3,8 @@ version 0.8.3:
    XML namespaces in a future version.
  - First pass at Unicode-proofing the whole system, so that multi-lingual
    AIML files can be processed.
+ - Added support for "index" attribute in "star", "thatstar" and "topicstar"
+   elements (thanks to Robert D. Cotey for the patch!)
 
 version 0.8.2:
  - Added protection against infinite AIML recursion.
